<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#2668B9"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#2E6FFF">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:background="#2E6FFF">
            
            <ImageView
                android:background="#2E6FFF"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/sh1"
                android:contentDescription="TODO" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_ragil_trireza_r"
                android:textSize="15sp"
                android:textColor="#000000"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayu_rahmawati"
                android:textSize="15sp"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="#779def">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lampu_utama"
                android:textSize="20sp"
                android:textColor="#000000"/>
        </LinearLayout>

        <LinearLayout
            android:background="#8cd8ff"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:background="#2E6FFF"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/lamp1"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lampu"
                    android:gravity="right"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:layout_marginTop="15dp"
                    android:background="#779def"
                    tools:ignore="RtlHardcoded" />

                <ImageView
                    android:layout_marginTop="10dp"
                    android:src="@drawable/lamp1"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="#2E6FFF"/>
            </LinearLayout>

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="#2E6FFF"
                    android:src="@drawable/dark"
                    android:elevation="20sp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kamar"
                    android:gravity="left"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:layout_marginTop="15dp"
                    android:background="#779def"
                    tools:ignore="RtlHardcoded" />

                <ImageView
                    android:layout_marginTop="10dp"
                    android:src="@drawable/dark"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="#2E6FFF"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/lampu_utama_mati"
            android:textSize="20sp"
            android:textColor="#000000"
            android:gravity="left|center_horizontal"
            android:background="#779def"
            android:layout_marginTop="10dp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/lampu_kamar_mati"
            android:textSize="20sp"
            android:textColor="#000000"
            android:gravity="left|center_horizontal"
            android:background="#779def"
            android:layout_marginBottom="20dp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright_smart_home"
            android:textSize="20sp"
            android:textColor="#000000"
            android:gravity="center_horizontal|center"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>


</RelativeLayout>