<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/lambang"
            android:background="#ffe0b3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/sh1"
            android:contentDescription="TODO" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m_ragil_trireza_r"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ayu_rahmawati"
            android:textSize="15sp"
            android:textColor="#000000" />
    </LinearLayout>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Switch" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:text="@string/suhu_ruangan"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/_36_c"
            android:textColor="#000000"
            android:textSize="160sp"
            android:layout_marginBottom="120dp"/>

    </LinearLayout>
</LinearLayout>
